# qt-ts-translator

./: .gitignore  CMakeLists.txt  FixedDictManager.cpp  FixedDictManager.h  MainWindow.cpp  MainWindow.h  README.md  README.zh-CN.md  TSManager.cpp  TSManager.h  Utils.cpp  Utils.h  main.cpp
demo/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  TranslateLoader.cpp  TranslateLoader.h  main.cpp  res.qrc
demo/i18n/: app_ja.qm  app_ja.ts  app_zh_CN.qm  app_zh_CN.ts  qtbase_zh_CN.qm
qt-linguist-shared/: README.md  numerus.cpp  qtranslator_p.h  translator.cpp  translator.h
